--- a/src/assets/scss/base/_index.scss
+++ b/src/assets/scss/base/_index.scss
@@ -1,9 +1,12 @@
 
-
 body {
   font-family: 'Lato', Arial, Helvetica, sans-serif;
 }
 
 a {
   text-decoration: none;
+}
+
+ul {
+  padding-left: 0;
 }
