--- a/src/assets/scss/modules/header/dropdown/_dropdown_desktop.scss
+++ b/src/assets/scss/modules/header/dropdown/_dropdown_desktop.scss
@@ -1,8 +1,9 @@
 .dropdown {
   position: absolute;
-  height: 15rem;
+  height: 26rem;
+  width: 85vw;
   top: 9rem;
-  left: 0;
+  left: 6rem;
   right: 0;
   background-color: #fff;
   margin: 10px 17px;
@@ -10,6 +11,7 @@
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
   z-index: 2000;
   overflow: hidden;
+
 
   & .dropdown-row {
     height: 100%;
@@ -24,27 +26,45 @@
   & .dropdown-col {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: space-between;
+
+    margin-right: 2rem;
 
     height: 100%;
     width: 35%;
 
     & .title {
       text-transform: capitalize;
+      color: $color-main;
+      font-weight: bold;
+      font-size: 17px;
+      line-height: 1.375;
     }
 
     & ul {
+      margin-top: 5px;
+      border-top: 1px solid $color-ghost;
       height: 100%;
+      width: 100%;
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
       justify-content: flex-start;
       align-items: stretch;
-      align-content: space-around;
+      align-content: space-between;
 
       & li {
         color: $color-main;
-        padding-right: 2rem;
+        font-size: 14px;
+        letter-spacing: 0.01em;
+        line-height: 1.6;
         list-style: none;
+        margin-bottom: 10px;
+        &:hover{
+          font-weight: bold;
+        }
       }
     }
   }
