style: Ajout de la banniere

--- a/src/assets/scss/modules/home/_home.scss
+++ b/src/assets/scss/modules/home/_home.scss
@@ -1,3 +1,9 @@
 .title--card {
   font-family: 'Lato', sans-serif;
 }
+
+#banniere {
+ // border: 1px solid yellow;
+  background: url('https://cdn3.chrono24.com/images/default/home/hero/new-visitor/speedmasterset-lg-master.jpg?auto=compress&w=1920');
+  height: 500px;
+}
