--- a/src/assets/scss/modules/home/_home.scss
+++ b/src/assets/scss/modules/home/_home.scss
@@ -2,8 +2,13 @@
   font-family: 'Lato', sans-serif;
 }
 
+banniere--text-1 {
+  font-family: 'Lato', sans-serif;
+}
+
 #banniere {
  // border: 1px solid yellow;
   background: url('https://cdn3.chrono24.com/images/default/home/hero/new-visitor/speedmasterset-lg-master.jpg?auto=compress&w=1920');
   height: 500px;
+  position: relative;
 }
