--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,7 +2,8 @@
 @import "base/colors";
 @import "base/bootstrap";
 @import "base/index";
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap');
 /* header */
 @import "modules/header/index";
 
